# FabricaEngine

./: .gitignore  LICENSE  README.md
engine/: CMakeLists.txt  config.h
engine/apps/: CMakeLists.txt
engine/apps/runtime_sample/: main.cc
engine/build_rhi/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  FabricaEngine.sln  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
engine/build_rhi/core/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  fabrica_core_app.vcxproj  fabrica_core_app.vcxproj.filters  fabrica_core_assets.vcxproj  fabrica_core_assets.vcxproj.filters  fabrica_core_async.vcxproj  fabrica_core_async.vcxproj.filters  fabrica_core_common.vcxproj  fabrica_core_common.vcxproj.filters  fabrica_core_ecs.vcxproj  fabrica_core_ecs.vcxproj.filters  fabrica_core_input.vcxproj  fabrica_core_input.vcxproj.filters  fabrica_core_jobs.vcxproj  fabrica_core_jobs.vcxproj.filters  fabrica_core_logging.vcxproj  fabrica_core_logging.vcxproj.filters  fabrica_core_memory.vcxproj  fabrica_core_memory.vcxproj.filters  fabrica_core_runtime.vcxproj  fabrica_core_runtime.vcxproj.filters  fabrica_core_tests.vcxproj  fabrica_core_tests.vcxproj.filters  fabrica_core_window.vcxproj  fabrica_core_window.vcxproj.filters
engine/build_rhi/pal/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  fabrica_pal.vcxproj  fabrica_pal.vcxproj.filters  fabrica_pal_tests.vcxproj  fabrica_pal_tests.vcxproj.filters
engine/build_rhi/renderer/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  fabrica_renderer.vcxproj  fabrica_renderer.vcxproj.filters  fabrica_renderer_shaders.vcxproj  fabrica_renderer_shaders.vcxproj.filters  fabrica_renderer_tests.vcxproj  fabrica_renderer_tests.vcxproj.filters
engine/build_rhi/rhi/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  fabrica_rhi.vcxproj  fabrica_rhi.vcxproj.filters  fabrica_rhi_tests.vcxproj  fabrica_rhi_tests.vcxproj.filters
engine/build_rhi/samples/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  fabrica_assets_sample.vcxproj  fabrica_assets_sample.vcxproj.filters  fabrica_async_sample.vcxproj  fabrica_async_sample.vcxproj.filters  fabrica_common_sample.vcxproj  fabrica_common_sample.vcxproj.filters  fabrica_ecs_sample.vcxproj  fabrica_ecs_sample.vcxproj.filters  fabrica_input_sample.vcxproj  fabrica_input_sample.vcxproj.filters  fabrica_jobs_sample.vcxproj  fabrica_jobs_sample.vcxproj.filters  fabrica_logging_sample.vcxproj  fabrica_logging_sample.vcxproj.filters  fabrica_memory_sample.vcxproj  fabrica_memory_sample.vcxproj.filters  fabrica_pal_sample.vcxproj  fabrica_pal_sample.vcxproj.filters  fabrica_renderer_sample.vcxproj  fabrica_renderer_sample.vcxproj.filters  fabrica_rhi_triangle_sample.vcxproj  fabrica_rhi_triangle_sample.vcxproj.filters  fabrica_rhi_triangle_sample_shaders.vcxproj  fabrica_rhi_triangle_sample_shaders.vcxproj.filters  fabrica_runtime_headless_sample.vcxproj  fabrica_runtime_headless_sample.vcxproj.filters  fabrica_runtime_sample.vcxproj  fabrica_runtime_sample.vcxproj.filters  fabrica_view_application_sample.vcxproj  fabrica_view_application_sample.vcxproj.filters  fabrica_window_sample.vcxproj  fabrica_window_sample.vcxproj.filters
engine/core/: CMakeLists.txt
engine/core/app/: base_view.h  fabrica.h  view_application.cc  view_application.h  view_application_test.cc
engine/core/assets/: asset_path.cc  asset_path.h  resource_handle.h  resource_manager.cc  resource_manager.h  resource_manager_test.cc
engine/core/async/: future.h  future_group.cc  future_group.h  future_impl.cc  future_impl.h  future_test.cc
engine/core/common/: assert.h  holdable.h  holdable_test.cc  invocable.h  invocable_test.cc  status.cc  status.h  status_test.cc  typed_id.h
engine/core/config/: config.h
engine/core/ecs/: archetype_store.h  component_registry.h  ecs_types.h  entity_store.h  world.cc  world.h  world_test.cc
engine/core/input/: input_action_map.cc  input_action_map.h  input_action_map_test.cc
engine/core/jobs/: executor.cc  executor.h  executor_test.cc  simple_foreground_executor.cc  simple_foreground_executor.h  task_id.h  task_priority.h  task_scheduler.cc  task_scheduler.h  task_scheduler_test.cc  thread_pool_executor.cc  thread_pool_executor.h
engine/core/logging/: log_channel.h  log_level.h  logger.cc  logger.h  logger_test.cc
engine/core/memory/: linear_allocator.cc  linear_allocator.h  linear_allocator_test.cc  pool_allocator.h  pool_allocator_test.cc  stack_allocator.cc  stack_allocator.h  stack_allocator_test.cc
engine/core/runtime/: engine_runtime.cc  engine_runtime.h  engine_runtime_test.cc
engine/core/window/: event_queue.h  event_queue_test.cc  glfw_window_backend.cc  glfw_window_backend.h  glfw_window_backend_test.cc  iwindow_backend.h  window_system.cc  window_system.h  window_system_test.cc  window_types.h
engine/pal/: CMakeLists.txt  file_system.cc  file_system.h  file_system_test.cc  test_main.cc  threading.cc  threading.h  threading_test.cc
engine/renderer/: CMakeLists.txt
engine/renderer/shaders/: fullscreen.vert  pbr.frag  pbr.vert  tonemapping.frag
engine/renderer/src/: Renderer.cpp
engine/renderer/tests/: camera_data_test.cc
engine/rhi/: CMakeLists.txt
engine/rhi/src/: RHIFactory.cpp  RenderGraph.cpp
engine/rhi/tests/: render_graph_test.cc  rhi_factory_test.cc  rhi_handle_test.cc
engine/rhi/vulkan/: CMakeLists.txt
engine/samples/: CMakeLists.txt  README.md
engine/samples/assets_sample/: main.cc
engine/samples/async_sample/: main.cc
engine/samples/common_sample/: main.cc
engine/samples/ecs_sample/: main.cc
engine/samples/input_sample/: main.cc
engine/samples/jobs_sample/: main.cc
engine/samples/logging_sample/: main.cc
engine/samples/memory_sample/: main.cc
engine/samples/pal_sample/: main.cc
engine/samples/renderer_sample/: main.cc
engine/samples/rhi_triangle_sample/: main.cc
(+315 files in other folders)
